--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <!-- <link rel='stylesheet' type='text/css' media='screen' href='main.css'> -->
 </head>
 <body>
+    <h1>example page</h1>
     
     <script src='script.js'></script>
 </body>
